--- a/applications/pacman.yaml
+++ b/applications/pacman.yaml
@@ -1,16 +1,16 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cluster-gitops
+  name: pacman-demo
   namespace: cluster-gitops
   annotations:
     argocd.argoproj.io/sync-wave: "0"
 spec:
-  project: cluster
+  project: applications
   source:
     repoURL: https://github.com/jguillemat/openshift-cluster-gitops.git
     targetRevision: main
-    path: cluster-gitops
+    path: pacman
   destination:
     server: https://kubernetes.default.svc
     namespace: cluster-gitops
