Change namespace from cluster-gitops to pacman-gitops

--- a/applications/pacman.yaml
+++ b/applications/pacman.yaml
@@ -13,7 +13,7 @@ spec:
     path: pacman
   destination:
     server: https://kubernetes.default.svc
-    namespace: cluster-gitops
+    namespace: pacman-gitops
   syncPolicy:
     automated:
       prune: true
