--- a/cluster-gitops/kustomization.yaml
+++ b/cluster-gitops/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - cluster-gitops-argocd-cluster-admin.yaml
   - cluster-gitops-argocd.yaml
   - cluster-app-project.yaml
+  - applications-app-project.yaml
 patches:
   - target:
       version: v1beta1
