Correct 'bame' to 'name' in namespace.yaml
Fix typo in the 'name' field of the Namespace.

--- a/pacman/namespace.yaml
+++ b/pacman/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: pacman-gitops
+  bame: pacman-gitops
   labels:
-    openshift.io/cluster-monitoring: "true" 
+    openshift.io/cluster-monitoring: "true"
