--- a/pacman/kustomization.yaml
+++ b/pacman/kustomization.yaml
@@ -1,4 +1,7 @@
-namespace: pacman-gitops
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+metadata:
+  name: pacman
 resources:
 - namespace.yaml
 - mongo-pvc.yaml
