Modify AppProject description for clarity
Updated project description to reflect focus on applications.

--- a/cluster-gitops/applications-app-project.yaml
+++ b/cluster-gitops/applications-app-project.yaml
@@ -2,9 +2,8 @@ apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
   name: applications
-  namespace: cluster-gitops
 spec:
-  description: Project for managing OpenShift cluster GitOps resources
+  description: Project for managing OpenShift applications GitOps resources
   sourceRepos:
     - '*'
   destinations:
