--- a/pacman/namespace.yaml
+++ b/pacman/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  bame: pacman-gitops
+  name: pacman-gitops
   labels:
     openshift.io/cluster-monitoring: "true"
