--- a/applications/pacman.yaml
+++ b/applications/pacman.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: pacman-demo
+  name: pacman-gitops
   namespace: cluster-gitops
   annotations:
     argocd.argoproj.io/sync-wave: "0"
