--- a/openshift-cluster-gitops-application.yaml
+++ b/openshift-cluster-gitops-application.yaml
@@ -1,8 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: openshift-cluster-gitops
-  namespace: cluster-gitops
+  name: app-of-apps
+  namespace: openshift-gitops
 spec:
   project: cluster
   source:
