--- a/applications/cluster-gitops.yaml
+++ b/applications/cluster-gitops.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: cluster-gitops
-  namespace: cluster-gitops
+  namespace: openshift-gitops
   annotations:
     argocd.argoproj.io/sync-wave: "0"
 spec:
@@ -13,7 +13,7 @@ spec:
     path: cluster-gitops
   destination:
     server: https://kubernetes.default.svc
-    namespace: cluster-gitops
+    namespace: openshift-gitops
   syncPolicy:
     automated:
       prune: true
