--- a/applications/openshift-gitops-operator.yaml
+++ b/applications/openshift-gitops-operator.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: openshift-gitops-operator
-  namespace: cluster-gitops
+  namespace: openshift-gitops
   annotations:
     argocd.argoproj.io/sync-wave: "0"
 spec:
