Change namespace from cluster-gitops to openshift-gitops

--- a/applications/pacman.yaml
+++ b/applications/pacman.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: pacman-gitops
-  namespace: cluster-gitops
+  namespace: openshift-gitops
   annotations:
     argocd.argoproj.io/sync-wave: "0"
 spec:
