Change namespace from cluster-gitops to openshift-gitops

--- a/applications/todo-application.yaml
+++ b/applications/todo-application.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: todo-app
-  namespace: cluster-gitops
+  namespace: openshift-gitops
 spec:
   project: applications
   destination:
