--- a/cluster-gitops/namespace.yaml
+++ b/cluster-gitops/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: cluster-gitops
+  name: openshift-gitops
   labels:
     openshift.io/cluster-monitoring: "true"
