--- a/cluster-gitops/cluster-gitops-argocd-cluster-admin.yaml
+++ b/cluster-gitops/cluster-gitops-argocd-cluster-admin.yaml
@@ -1,11 +1,11 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: cluster-gitops-argocd-cluster-admin
+  name: openshift-gitops-argocd-cluster-admin
 subjects:
   - kind: ServiceAccount
     name: cluster-gitops-argocd-application-controller
-    namespace: cluster-gitops
+    namespace: openshift-gitops
 roleRef:
   kind: ClusterRole
   name: cluster-admin
