--- a/cluster-gitops/kustomization.yaml
+++ b/cluster-gitops/kustomization.yaml
@@ -1,41 +1,40 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 metadata:
-  name: cluster-gitops
+  name: openshift-gitops
 resources:
   - namespace.yaml
   - cluster-gitops-argocd-cluster-admin.yaml
-  - cluster-gitops-argocd.yaml
   - cluster-app-project.yaml
   - applications-app-project.yaml
 patches:
   - target:
       version: v1beta1
       kind: ArgoCD
-      name: cluster-gitops
-      namespace: cluster-gitops
+      name: openshift-gitops
+      namespace: openshift-gitops
     path: healthchecks/patch-healthcheck-certificate.yaml
   - target:
       version: v1beta1
       kind: ArgoCD
-      name: cluster-gitops
-      namespace: cluster-gitops
+      name: openshift-gitops
+      namespace: openshift-gitops
     path: healthchecks/patch-healthcheck-cluster-secret-store.yaml
   - target:
       version: v1beta1
       kind: ArgoCD
-      name: cluster-gitops
-      namespace: cluster-gitops
+      name: openshift-gitops
+      namespace: openshift-gitops
     path: healthchecks/patch-healthcheck-cluster-service-version.yaml
   - target:
       version: v1beta1
       kind: ArgoCD
-      name: cluster-gitops
-      namespace: cluster-gitops
+      name: openshift-gitops
+      namespace: openshift-gitops
     path: healthchecks/patch-healthcheck-operator-config.yaml
   - target:
       version: v1beta1
       kind: ArgoCD
-      name: cluster-gitops
-      namespace: cluster-gitops
+      name: openshift-gitops
+      namespace: openshift-gitops
     path: healthchecks/patch-healthcheck-subscription.yaml
