--- a/openshift-gitops-operator/subscription.yaml
+++ b/openshift-gitops-operator/subscription.yaml
@@ -1,7 +1,7 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: openshift-gitops-operator-subscription
+  name: openshift-gitops-operator
   namespace: openshift-gitops-operator
   annotations:
     argocd.argoproj.io/sync-wave: "2"
@@ -14,6 +14,6 @@ spec:
   config:
     env:
       - name: DISABLE_DEFAULT_ARGOCD_INSTANCE
-        value: "true"
+        value: "false"
       - name: ARGOCD_CLUSTER_CONFIG_NAMESPACES
         value: "openshift-gitops,cluster-gitops"
