Change prune policy from true to false

--- a/openshift-gitops-operator.yaml
+++ b/openshift-gitops-operator.yaml
@@ -16,5 +16,5 @@ spec:
     namespace: openshift-gitops-operator
   syncPolicy:
     automated:
-      prune: true
+      prune: false
       selfHeal: true
